--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
         >Part 2</a
       >
     </div>
-    <footer>For best experience, please visit with a Laptop or Desktop</footer>
+    <footer>For the best experience, please visit with a Laptop or Desktop</footer>
     <div id="foo">
       <div id="sfctazk9cewqr6ngbphtm638fg4mffw6cbs"></div>
       <script
