Added Counter App

--- a/index.html
+++ b/index.html
@@ -57,7 +57,10 @@
         >Part 2</a
       >
     </div>
-    <footer>For the best experience, please visit with a Laptop or Desktop</footer>
+    <footer>
+      For the best experience, please visit with a Laptop or Desktop
+    </footer>
+
     <div id="foo">
       <div id="sfctazk9cewqr6ngbphtm638fg4mffw6cbs"></div>
       <script
@@ -74,6 +77,7 @@
             alt="hit counters" /></a
       ></noscript>
       <p>Visitor's count</p>
+      <a href="Js counter App/counterapp.html">Counter App</a>
     </div>
   </body>
 </html>
