--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
             alt="hit counters" /></a
       ></noscript>
       <p>Visitor's count</p>
-      <a href="Js counter App/counterapp.html">Counter App</a>
+      <a href="JSCapp/counterapp.html">Counter App</a>
     </div>
   </body>
 </html>
