--- a/JSCapp/counterapp.html
+++ b/JSCapp/counterapp.html
@@ -8,16 +8,18 @@
     <link rel="stylesheet" href="index.css" />
   </head>
   <body>
-    <div class="heading">
-      <h1>Js Counter App</h1>
-    </div>
+    <div class="main">
+      <div class="heading">
+        <h1>Js Counter App</h1>
+      </div>
 
-    <div class="counter">
-      <h2 id="JScounting">0</h2>
-      <div class="buttons">
-        <button onclick="Increase()">Increase</button>
-        <button onclick="Reset()">RESET</button>
-        <button onclick="Decrease()">Decrease</button>
+      <div class="counter">
+        <h2 id="JScounting">0</h2>
+        <div class="buttons">
+          <button onclick="Increase()">Increase</button>
+          <button onclick="Reset()">RESET</button>
+          <button onclick="Decrease()">Decrease</button>
+        </div>
       </div>
     </div>
   </body>
