--- a/index.html
+++ b/index.html
@@ -4,91 +4,46 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>OOPS Notes</title>
-    <link rel="icon" href="icon.png" type="image/png" />
-    <style>
-      body {
-        background-color: #0d0d0d !important;
-      }
-      h1.heading {
-        text-align: center;
-        color: whitesmoke;
-        text-shadow: 3px 2px 2px #5a20cb;
-        font-size: 50px;
-        margin-top: 100px;
-        /* background-color: black; */
-      }
+    <title>Prabaljainn.live</title>
+    <link rel="shortcut icon" href="./icons/" type="image/x-icon" />
 
-      div.buttons {
-        display: flex;
-        justify-content: center;
-        margin-top: 100px;
-        letter-spacing: 2px;
-      }
-      .btn-space {
-        margin: 30px;
-      }
-      footer {
-        text-align: center;
-        margin-top: 15%;
-      }
-      #foo {
-        position: fixed;
-        bottom: 0;
-        right: 0;
-        text-align: right;
-      }
-    </style>
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <h1 class="heading">OOPS NOTES</h1>
+    <nav class="flex flex-row flex-space-between">
+      <p1 class="website-name">
+        <span class="domain-name">Prabaljainn</span
+        ><span class="live">.live</span>
+      </p1>
 
-    <div class="buttons">
-      <a
-        class="btn btn-primary btn-lg btn-space"
-        href="OOPS/OOPS1.html"
-        role="button"
-        >Part 1</a
-      >
-      <a
-        class="btn btn-primary btn-lg btn-space"
-        href="OOPS/OOPS2.html"
-        role="button"
-        >Part 2</a
-      >
-    </div>
-    <footer>
-      For the best experience, please visit with a Laptop or Desktop
-    </footer>
+      <div class="right-links flex-row">
+        <p>AboutMe</p>
+        <p>LinkedIn</p>
+        <p>Instagram</p>
+        <p>Filler 1</p>
+        <p>Filler 2</p>
+        <p>Resumé</p>
+      </div>
+    </nav>
+    <main class="flex flex-row">
+      <div class="left-pane flex-column">
+        <h1>BakchodioPhile,</h1>
+        <h2>Ardent Software Developer</h2>
+        <h2>Learning mode is on!</h2>
+      </div>
 
-    <div id="foo">
-      <div id="sfctazk9cewqr6ngbphtm638fg4mffw6cbs"></div>
-      <script
-        type="text/javascript"
-        src="https://counter5.optistats.ovh/private/counter.js?c=tazk9cewqr6ngbphtm638fg4mffw6cbs&down=async"
-        async
-      ></script>
-      <noscript
-        ><a href="https://www.freecounterstat.com" title="hit counters"
-          ><img
-            src="https://counter5.optistats.ovh/private/freecounterstat.php?c=tazk9cewqr6ngbphtm638fg4mffw6cbs"
-            border="0"
-            title="hit counters"
-            alt="hit counters" /></a
-      ></noscript>
-      <p>Visitor's count</p>
-      <a href="JSCapp/counterapp.html">Counter App</a>
+      <div class="right-pane">
+        <img src="./img/blob.svg" alt="blob image" class="blob" />
+        <img src="./img/prabal.png" alt="Prabal's Image" class="prabal-img" />
+        <img src="./img/name-img.png" alt="name" class="name-png" />
+        <!-- <img src="./img/arrow.png" alt="" class="arrow" /> -->
+      </div>
+    </main>
+    <div class="disclaimer">
+      <p>
+        This website is under development, I am learning by applying on this
+      </p>
+      <p>Deployed on Amazon EC2, Made with pure HTML and CSS</p>
     </div>
   </body>
 </html>
-<!-- Latest compiled and minified CSS -->
-<link
-  rel="stylesheet"
-  href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css"
-/>
-
-<!-- jQuery library -->
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-
-<!-- Latest compiled JavaScript -->
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
