--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Prabaljainn.live</title>
+    <link rel="icon" type="image/x-icon" href="/icons/favicon.ico">
     <link rel="shortcut icon" href="./icons/" type="image/x-icon" />
 
     <link rel="stylesheet" href="style.css" />
@@ -17,12 +18,12 @@
       </p1>
 
       <div class="right-links flex-row">
-        <p>AboutMe</p>
-        <p>LinkedIn</p>
-        <p>Instagram</p>
-        <p>Filler 1</p>
-        <p>Filler 2</p>
-        <p>Resumé</p>
+        <button class="right-links-text"><a href="#">AboutMe</a></button>
+        <button class="right-links-text"><a href="https://www.linkedin.com/in/prabaljainn/">LinkedIn</a></button>
+        <button class="right-links-text"><a href="https://www.instagram.com/prabaljainn/">Instagram </a></button>
+        <button class="right-links-text"><a>Filler 1</button>
+        <button class="right-links-text"><a>Filler 2</button>
+        <button class="right-links-text"><a href="./resume.html">Resumé</a></button>
       </div>
     </nav>
     <main class="flex flex-row">
