--- a/resume.html
+++ b/resume.html
@@ -10,15 +10,16 @@
     * {
       margin: 0px 0px;
       padding: 0px 0px;
-      height: 100vh;
-      width: 100vw;
     }
     iframe {
       height: 100vh;
       width: 98vw;
+      display: flex;
+      border: 1px black solid;
     }
   </style>
   <body>
     <iframe src="./Prabal_Jain's Resume.pdf"></iframe>
   </body>
 </html>
+
